# iztalk-api_tts

./: .gitignore  README.md  app.py  pyproject.toml
src/f5_tts/model/: __init__.py  alignment_utils.py  cfm.py  dataset.py  duration_predictor.py  f5tts_wrapper-dur_pred.py  modules.py  preprocess_phoneme.py  trainer.py  utils.py
src/f5_tts/train/: distil_reload.py  finetune_cli.py  finetune_gradio.py  train.py
src/infer/: f5tts_wrapper.py
src/infer/model/: vocab.txt
